--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "name": "word-for-linux",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "boolean": "^3.2.0",
     "buffer-crc32": "^0.2.13",
@@ -81,7 +81,7 @@
     "files": [
       "icon.png",
       "tray-icon.png",
-      "index.js",
+      "src/index.js",
       "package.json",
       "node_modules/**/*"
     ],
